<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblBerlin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/berlin" />

        <TextView
            android:id="@+id/lblDenver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/denver" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgBerlin"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/berlin" />

        <ImageView
            android:id="@+id/imgDenver"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/denver" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblProfe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profe" />

        <TextView
            android:id="@+id/lblMoscu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/moscu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgProfe"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/el_profesor" />

        <ImageView
            android:id="@+id/imgMoscu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/moscu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblRio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/rio" />

        <TextView
            android:id="@+id/lblTokio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tokio" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgRio"
            android:layout_width="wrap_content"
            android:layout_height="133dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/rio" />

        <ImageView
            android:id="@+id/imgTokio"
            android:layout_width="wrap_content"
            android:layout_height="133dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/tokio" />
    </LinearLayout>
</LinearLayout>